Code for duplicate checker